fixes header styles to display better on small screen with smaller height

--- a/src/App.css
+++ b/src/App.css
@@ -446,7 +446,7 @@ textarea {
 
   .nav-container {
     position: absolute;
-    top: 295px;
+    bottom: 25%;
     margin: 0;
   }
 
@@ -467,10 +467,17 @@ textarea {
     border-radius: 5px;
   }
 
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .welcome-blob {
-    margin-top: 0;
-    margin-bottom: -125px;
-    top: -380px;
+    position: absolute;
+    bottom: 55%;
+    top: auto;
+    text-align: center;
+    margin-bottom: 0;
   }
 
   .welcome-blob h2 {
